@@ -65,7 +65,7 @@
     <section id="contact" class="contact">
       <div data-aos="fade-up">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1167.2439059785797!2d34.353500864109385!3d11.79586011976813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2smw!4v1732532328617!5m2!1sen!2smw" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1167.2439059785797!2d34.353500864109385!3d11.79586011976813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2smw!4v1732532328617!5m2!1sen!2smw" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       </div>
 
       <div class="container" data-aos="fade-up">
