@@ -176,7 +176,7 @@
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/logomark-b.png" class="img-fluid" alt="">
-                    <span>Lorem</span>
+                    <span>#####</span>
                   </div>
                   
                 </div>
