@@ -1,3 +1,6 @@
+
+
+
 Version: 5.2.0
   - Updated whole design 
   - Updated all outdated third party vendor libraries to their latest versions
@@ -61,7 +64,7 @@ Version: 2.1.0
   - Updated all outdated third party vendor libraries to their latest versions
   
 Version: 2.0.0
-  - The template was rebuilt from scratch with the latest Bootstrap version (4.5.0)
+  - The site was rebuilt from scratch with the latest Bootstrap version (4.5.0)
   - Added SMPTP support for the contact form script (Pro)
   - Added NodeJS NPM Development version (Pro unlimited & Membership members)
   
